# dualcut

./: .gitignore  AGENTS.md  CONTEXT.md  PARITY.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  flatpak.yml
docs/: USER_GUIDE.md
docs/adr/: 0001-rust-ges-gtk-stack.md  0002-json-document-ts-scripting.md  0003-github-releases-distribution.md  0004-vello-uri-bridge.md
docs/recipes/: auto-captions.md
engine/: .gitignore  Cargo.toml
engine/build-aux/: io.github.hanthor.Dualcut.desktop  io.github.hanthor.Dualcut.json  io.github.hanthor.Dualcut.metainfo.xml
engine/examples/: demo-project.json
engine/schema/: dualcut.d.ts  dualcut.schema.json
engine/src/: api.rs  document.rs  lib.rs  mapping.rs  scripting.rs  templates.rs  thumbs.rs  vector.rs  vellosrc.rs
scripts/: release.sh  remote-build.sh
skills/dualcut/: SKILL.md
tests/: smoke.sh
