[package]
name = "dualcut-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
gst-plugin-gtk4 = { version = "0.15.2", optional = true }
gstreamer = "0.25.3"
gstreamer-editing-services = "0.25.2"
gstreamer-pbutils = "0.25.2"
gtk4 = { version = "0.11.4", optional = true }
libadwaita = { version = "0.9.2", optional = true }

[features]
preview = ["dep:gtk4", "dep:libadwaita", "dep:gst-plugin-gtk4"]

[[bin]]
name = "render"
path = "src/bin/render.rs"

[[bin]]
name = "preview"
path = "src/bin/preview.rs"
required-features = ["preview"]
